
  parted now uses ext_range device sysfs attribute to determine maximum number
  of partitions the device can hold.  With this change, parted now correctly
  informs kernel about new partitions on partitionable MD RAID devices.

  libparted: creating a new partition table on a device with an existing
  mac partition table could result in a failed assertion.

** Changes in behavior

  Floppy drives are no longer scanned on linux: they cannot be partitioned
  anyhow, and some users have a misconfigured BIOS that claims to have a
  floppy when they don't, and scanning gets hung up.

  parted: the mkpart command has changed semantics with regard to specifying
  the end of the partition.  If the end is specified using units of MiB, GiB,
  etc., parted subtracts one sector from the specified value.  With this
  change, it is now possible to create partitions like 1MiB-2MiB, 2MiB-3MiB
  and so on.

  Device-mapper devices ( LVM, dmraid ) no longer insert a 'p' between the
  base device name and the partition number unless the last character of
  the base device name is a digit.  This brings parted into compliance with
  the partition naming of kpartx and "linux since the dawn of time", but
  differs from the way that dmraid 1.0.0-rc16-3 operates.  A patch to
  correct dmraid has been submitted to ataraid-list@redhat.com.  Without
  this patch, parted and dmraid will both create duplicate partition devices
  named /dev/mapper/foo1 and /dev/mapper/foop1.

  Add the ability to set the boot flag on the GPT PMBR. This is needed
  for some BIOS systems that refuse to boot from GPT unless this is set.
  disk_set and disk_toggle commands can be used to set the pmbr_boot
  flag on the disk.

  The flag is also displayed in a new line, 'Disk Flags:' like this:

    Model:  (file)
    Disk /home/bcl/disk.img: 4295MB
    Sector size (logical/physical): 512B/512B
    Partition Table: gpt
    Disk Flags: pmbr_boot

  Using -m the flags are added after the model name field:
