@@ -84,6 +84,9 @@ GNU parted NEWS                                    -*- outline -*-
 
 ** Changes in behavior
 
+  Added support for recognizing btrfs filesystem. This simply displays
+  btrfs in the 'file system' column of the parted output.
+
   Floppy drives are no longer scanned on linux: they cannot be partitioned
   anyhow, and some users have a misconfigured BIOS that claims to have a
   floppy when they don't, and scanning gets hung up.
